Add self field access in C generation